--- a/config.yaml
+++ b/config.yaml
@@ -3,14 +3,17 @@ auth:
     username: USERNAME
     password: PASSWORD
 images:
+  # nginx-ingres
+  k8s.gcr.io/ingress-nginx/controller: sundewang/ingress-nginx-controller
+  k8s.gcr.io/ingress-nginx/kube-webhook-certgen: sundewang/kube-webhook-certgen
   # kubernetes image
-  k8s.gcr.io/kube-apiserver: sundewang/kube-apiserver
-  k8s.gcr.io/kube-scheduler: sundewang/kube-scheduler
-  k8s.gcr.io/kube-proxy: sundewang/kube-proxy
-  k8s.gcr.io/kube-controller-manager: sundewang/kube-controller-manager
-  k8s.gcr.io/etcd: sundewang/etcd
-  coredns/coredns: sundewang/coredns
-  k8s.gcr.io/pause: sundewang/pause
+  #k8s.gcr.io/kube-apiserver: sundewang/kube-apiserver
+  #k8s.gcr.io/kube-scheduler: sundewang/kube-scheduler
+  #k8s.gcr.io/kube-proxy: sundewang/kube-proxy
+  #k8s.gcr.io/kube-controller-manager: sundewang/kube-controller-manager
+  #k8s.gcr.io/etcd: sundewang/etcd
+  #coredns/coredns: sundewang/coredns
+  #k8s.gcr.io/pause: sundewang/pause
   
   
   
